# did-ckb

./: Cargo.toml  README.md  checksums.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yaml
contracts/did-ckb-ts/: Cargo.toml  Makefile  README.md  build.rs
contracts/did-ckb-ts/molecules/: cell_data.mol  witness.mol
contracts/did-ckb-ts/src/: entry.rs  error.rs  main.rs  molecules.rs
contracts/did-ckb-ts/src/molecules/: cell_data.rs  witness.rs
deployment/mainnet/: README.md  deployment.toml  info.json  step-1-gen-tx.sh  step-2-sign.sh  verify.sh
deployment/mainnet/migrations/: 2025-11-27-050508.json
deployment/testnet/: deployment.toml
deployment/testnet/migrations/: 2025-06-18-055806.json  2025-07-08-053404.json  2025-07-28-015211.json  2025-11-28-022028.json
tests/src/: tests.rs
ts-tests/did-ckb-ts/: .gitignore  .prettierignore  README.md  package.json
ts-tests/did-ckb-ts/src/: coverage.ts  index.test.ts  index.ts  molecule.ts  plc.ts
ts-tests/did-ckb-ts/src/__snapshots__/: index.test.ts.snap
